@@ -1,3 +1,11 @@
+2009-11-04  Andreas Kupries  <andreask@activestate.com>
+
+	* comm.tcl (::comm::commCollect): [Bug 2890743]. Replaced
+	* comm.man: lindex/lreplace with a procedure emulating lindex's
+	* pkgIndex.tcl: behaviour pre Tcl 8, i.e. it needs only the first
+	  word to be a proper list element to parse it ouf the
+	  buffer. Bumped package version to 4.6.1.
+
 2009-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* comm.tcl: Added option -socketcmd enabling users to override how
